# seaborg

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  TASK_LIFECYCLE.md  build.rs  build_metadata.rs  main  perf.data  perf.data.old  perft-suite.sh  snapshot.sh
.cargo/: config.toml
.github/workflows/: ci.yml
backlog/: config.yml
backlog/completed/: task-2 - Avoid-razoring-searches-with-mate-score-bounds.md  task-24 - Avoid-razoring-searches-with-mate-score-bounds.md  task-25 - Avoid-razoring-searches-with-mate-score-bounds.md  task-3 - Establish-autonomous-task-review-lifecycle.md
backlog/decisions/: decision-1 - Fix-NNUE-training-baseline-at-the-post-strengthening-search-defer-Lazy-SMP-TASK-64.16-to-post-NNUE.md  decision-2 - Include-LMR-refinement-TASK-64.22-in-the-NNUE-training-baseline-drop-deferred-SEE-main-search-pruning-TASK-64.21.md  decision-3 - Fix-the-NNUE-training-baseline-at-the-post-LMR-search-TASK-64.22-84.6-Elo-and-defer-remaining-search-micro-optimisations-to-post-NNUE.md
backlog/docs/: doc-2 - TASK-34-self-play-robustness-investigation.md  doc-3 - TASK-39-UCI-stop-responsiveness-investigation.md
backlog/tasks/: task-1 - Build-a-local-browser-UI-for-playing-Seaborg.md  task-1.1 - Refactor-search-behind-a-reusable-typed-engine-API.md  task-1.2 - Add-the-authoritative-game-controller.md  task-1.3 - Add-the-loopback-UI-server-and-`-ui`-lifecycle.md  task-1.4 - Build-the-dependency-free-interactive-chessboard.md  task-1.5 - Complete-the-browser-game-experience-and-integration-hardening.md  task-10 - Apply-the-fifty-move-rule-at-100-plies.md  task-11 - Reject-structurally-invalid-FEN-without-panicking.md  task-12 - Repair-transposition-table-reuse-and-mate-score-semantics.md  task-13 - Clear-castling-rights-when-a-rook-is-captured.md  task-14 - Make-UCI-parsing-and-command-handling-total.md  task-15 - Connect-engine-configuration-to-UCI-options-and-search-resources.md  task-16 - Fix-perft-depth-zero-verbose-and-check-statistics.md  task-17 - Bring-the-workspace-to-strict-Clippy-clean.md  task-18 - Restore-portable-default-build-settings.md  task-19 - Make-Git-build-metadata-reproducible-and-resilient.md  task-20 - Clarify-crate-names-and-public-API-boundaries.md  task-21 - Modernize-and-deduplicate-the-dependency-graph.md  task-22 - Make-UCI-output-protocol-clean-and-version-consistent.md  task-23 - Enforce-Rust-workspace-quality-gates-in-CI.md  task-26 - Make-Git-build-metadata-resilient-outside-a-Git-checkout.md  task-27 - Add-a-reproducible-engine-strength-regression-test-script.md  task-28 - Document-quiescence-TT-Hit-collision-guard-divergence-from-main-search.md  task-29 - Add-a-ply-cap-on-quiescence-check-extensions.md  task-3 - Establish-autonomous-task-review-lifecycle.md  task-30 - Restore-move-generation-performance-without-weakening-domain-safety.md  task-31 - Evaluate-whether-the-Rust-workspace-should-be-reorganised-to-be-more-idiomatic.md  task-32 - Engine-returns-illegal-null-move-and-forfeits-at-fast-time-controls.md  task-33 - Add-a-merge-integration-gate-for-landing-approved-tasks-in-a-parallel-swarm.md  task-33 - Automate-merge-integration-when-the-manual-merge-skill-becomes-a-bottleneck.md  task-34 - Engine-self-play-under-a-UCI-runner-is-unstable-intermittent-search-hang-illegal-PV-moves-EOF-null-move.md  task-35 - Fix-intermittent-search-UCI-completion-deadlock-lost-search-done-wakeup.md  task-36 - Fix-illegal-moves-in-the-reported-principal-variation-info-...-pv-....md  task-37 - Add-regression-coverage-for-the-stdin-EOF-stop-abort-bestmove-path.md  task-37 - Return-a-legal-best-so-far-move-on-stdin-EOF-instead-of-bestmove-0000.md  task-38 - Time-allocation-starves-the-opening-at-fast-time-controls.md  task-39 - Investigate-UCI-stop-responsiveness-under-the-guaranteed-minimum-search.md  task-4 - Make-transposition-table-generation-invariants-explicit.md  (+96 more)
benches/: bb.rs  move.rs  movegen.rs  perft.rs  search.rs  square.rs  tt.rs
chess/: Cargo.toml
chess/src/: bit_twiddles.rs  lib.rs  macros.rs  masks.rs  (+3 more)
core/: Cargo.toml
docs/: browser-ui-manual-checks.md  default-network.md  nnue-design-contract.md  strength-testing.md  workspace-layout-assessment.md
engine/: Cargo.toml  build.rs
engine/examples/: killer_ablation.rs  ordering_ablation.rs  qtree_reachability.rs  task39_qtree.rs
engine/nets/: default.sbnn
engine/src/: comm.rs  continuation.rs  engine.rs  eval.rs  game.rs  history.rs  info.rs  killer.rs  lib.rs  nnue.rs  options.rs  ordering.rs  perft.rs  pv_table.rs  score.rs  search.rs  see.rs  selfplay.rs  sess.rs  time.rs  trace.rs  tt.rs  uci.rs
engine/src/comm/: mod.rs  uci.rs
engine/src/comm/uci/: cmd.rs  mod.rs  out.rs
engine/src/nnue/: accumulator.rs  embedded.rs  format.rs  inference.rs  mod.rs
engine/src/search/: alphabeta.rs  killer.rs  mod.rs  negamax.rs  ordering.rs  params.rs  perft.rs  perft_with_tt.rs  pv_search.rs  search.rs  team.rs
engine/src/selfplay/: filter.rs  format.rs  mod.rs  openings.rs
engine/src/tables/: mod.rs
engine/src/time/: mod.rs
engine/src/uci/: inbound.rs  mod.rs  outbound.rs  parse.rs
engine/src/ui/: http.rs  json.rs  mod.rs  server.rs  session.rs  tests.rs  wire.rs
engine/src/ui/assets/: app.js  board.js  format.js  index.html  pieces.svg.LICENSE.md  style.css
engine/src/ui/frontend/: app.ts  board.test.mjs  board.ts  format.test.mjs  format.ts  tsconfig.json
engine/tests/: loads_exported_network.rs  timed_selfplay.rs
engine/tests/fixtures/: exported_v1.sbnn  golden_v1.sbnn  golden_v1.vectors
engine2/: Cargo.toml
lichess/: Cargo.toml  REFERENCE_CONFORMANCE.md  seaborg-lichess.example.toml
lichess/src/: account.rs  backoff.rs  client.rs  config.rs  error.rs  event.rs  game.rs  game_stream.rs  lib.rs  matchmaking.rs  policy.rs  run.rs  shutdown.rs  transport.rs
src/: bb.rs  bit_twiddles.rs  cmdline.rs  datagen.rs  dev.rs  eval.rs  fen.rs  lib.rs  macros.rs  main.rs  masks.rs  mono_traits.rs  mov.rs  movegen.rs  movelist.rs  perft.rs  position.rs
tests/: build_metadata.rs
tools/: stop_latency_probe.rb  task39_stop_probe.rb
(+100 files in other folders)
