[workspace]
members = ["core", "engine"]
# Pin the feature resolver explicitly so it stays fixed if a member's edition
# changes later; version 2 is the edition-2021 default this workspace already used.
resolver = "2"

# Metadata shared by every member is declared once here and inherited via
# `<field>.workspace = true`. Member-specific fields (package name) stay local.
[workspace.package]
version = "0.1.0"
authors = ["George Seabridge <georgeseabridge@gmail.com>"]
edition = "2021"
license = "MIT"

# Only dependencies used by more than one member live here, so a single version
# bump keeps them aligned. Single-member and internal path dependencies stay in
# their own manifests where ownership is clearer.
[workspace.dependencies]
rand = "0.10.2"
separator = "0.4"

[package]
name = "seaborg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chess_core = { package = "core", path = "./core" }
engine = { path = "./engine" }
clap = { version = "4.6.2", features = ["derive"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
separator.workspace = true
simple_logger = { version = "5.2.0", features = ["stderr"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "movegen"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "bb"
harness = false

[[bench]]
name = "square"
harness = false

[[bench]]
name = "tt"
harness = false
