[package]
name = "engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core = { path = "../core" }
crossbeam-channel = "0.5.16"
separator.workspace = true
open = "5.4.0"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rand.workspace = true
