[package]
name = "lichess"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core = { path = "../core" }
engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
log = "0.4"
# ureq is a synchronous HTTP client; its default TLS backend is rustls, which
# avoids a system OpenSSL build dependency. Only this crate talks HTTP, so the
# dependency stays local per the workspace manifest policy.
ureq = "3"
# The bot configuration file is TOML; only this crate reads it.
toml = "1"
