[package]
name = "lichess"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Mirrors the engine's embedding switch so a `--no-default-features` build
# actually reaches the engine. Cargo unifies features across the graph, so a
# dependency edge that took the engine's defaults would silently re-enable the
# embedded network no matter what the top-level build asked for.
[features]
default = ["embedded-net"]
embedded-net = ["engine/embedded-net"]

[dependencies]
chess = { path = "../chess" }
engine = { path = "../engine", default-features = false }
serde.workspace = true
serde_json.workspace = true
log = "0.4"
# ureq is a synchronous HTTP client; its default TLS backend is rustls, which
# avoids a system OpenSSL build dependency. Only this crate talks HTTP, so the
# dependency stays local per the workspace manifest policy.
ureq = "3"
# The bot configuration file is TOML; only this crate reads it.
toml = "1"
# Used only to install a SIGINT/SIGTERM handler for graceful shutdown. libc is
# already in the build graph (via ureq's TLS stack), so depending on it directly
# adds no new crate; a dedicated Ctrl-C crate would pull in several. Unix-only in
# effect: the handler is compiled behind `cfg(unix)`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
